# video-capture-bot

./: .env.example  README.md  bot.py  pyproject.toml
tests/: test_version.py
video_capture_bot/: obs_client.py
video_recording_bot/: obs_client.py
