[tool.poetry]
name = "video-recording-bot"
version = "0.1.0" # After updated your version, you have to run `poetry install` again.
description = "Discord bot that regularly shoots videos and posts them to the Discord channel."
authors = ["Geson-anko <59220704+Geson-anko@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
discord-py = "^2.3.2"
obsws-python = "^1.6.2"
ffmpeg-python = "^0.2.0"
tyro = "^0.6.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pytest = "^7.4.3"
pytest-slow = "^0.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"

minversion = "6.0"
testpaths = "tests/"


[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]
